istio-setup/mtls/mtls-namespace.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default # specific namespace
spec:
  mtls:
    mode: STRICT
