istio-setup/mtls/destinationrule_message_processing_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: enable-mtls-for-message-processing-service
  namespace: default
spec:
  host: message-processing-service.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
