istio-setup/mtls/destinationrule_simple_msg_svc.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: enable-mtls-for-simple-msg-svc
  namespace: default
spec:
  host: simple-msg-svc.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
