istio-setup/mtls/mtls-destinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: enable-mtls-for-service
  namespace: default #<namespace name>
spec:
  host: message-processing-service.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
